--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -5,17 +5,8 @@
         "rootDir": "./src",
         "baseUrl": ".",
         "jsx": "react-jsx",
-        "lib": [
-            "ES2022",
-            "DOM",
-            "DOM.Iterable"
-        ]
+        "lib": ["ES2022", "DOM", "DOM.Iterable"]
     },
-    "include": [
-        "src/**/*"
-    ],
-    "exclude": [
-        "node_modules",
-        "dist"
-    ]
+    "include": ["src/**/*"],
+    "exclude": ["node_modules", "dist"]
 }
